rust/macros/tests/invalid/target/debug/deps/double_commas_rs-967303e23b9a2615.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libdouble_commas_rs-967303e23b9a2615.rmeta: double-commas.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-967303e23b9a2615.d: double-commas.rs Cargo.toml

double-commas.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
